# tstr_builder

./: .clang-format  .clang-tidy  meson.build
.github/workflows/: build.yml  lint.yml  meson.yml  musl.yml  test.yml
src/: meson.build  string_builder.c  string_builder.h  tstr_builder.c  tstr_builder.h  utils.h
src/_impl/: utils.h
src/utils/: buffered_reader.c  buffered_reader.h  clock.c  clock.h  errors.c  errors.h  log.c  log.h  meson.build  myqueue.c  myqueue.h  number_parsing.c  number_parsing.h  parse.c  parse.h  path.c  path.h  sized_buffer.c  sized_buffer.h  string_builder.c  string_builder.h  string_helper.c  string_helper.h  thread_helper.c  thread_helper.h  thread_pool.c  thread_pool.h  tmap_common_impl.c  tqueue.c  tqueue.h  unsafe_utils.h  utf8_helper.c  utf8_helper.h  utils.c  utils.h  zmap_common_impl.c  zvec_common_impl.c
subprojects/: tstr.h.wrap  tvec.h.wrap
